# pymagnet

./: .gitattributes  .gitignore  .travis.yml  404.html  MANIFEST.in  README.md  badges.sh  index.html  mkdocs.yml  objects.inv  pypi_README.md  pyproject.toml  refs.bib  setup.py  sitemap.xml  tox-generated.ini  tox.ini
code_reference/magnets/: index.html
code_reference/plots/: index.html
code_reference/pymagnet/: index.html
code_reference/utils/: index.html
docs/: about.md  equations.md  examples.md  forces_torques.md  index.md  magnets.md  methods.md  plots.md  quaternions.md  transforms.md  utils.md
docs/code_reference/: magnets.md  pymagnet.md
docs/magnets/: composite_magnets.md  magnets_1d.md  magnets_2d.md  magnets_3d.md  magnets_overview.md
docs/methods/: methods.md  transforms.md
docs/plots/: plots_2d.md  plots_3d.md  plots_overview.md
equations/: index.html
examples/: 1D Examples.ipynb  2D Examples.ipynb  3D Examples Matloblib.ipynb  Detailed Overview.ipynb  Examples.ipynb  First Steps.ipynb  Matplotlib 3D Plots.ipynb  Misc Examples.ipynb  STL Examples.ipynb  Stanford Bunny.ipynb  index.html
examples/Fields/: 1D Examples.ipynb  3D Examples - Assemblies.ipynb  3D_Examples Spheres.ipynb
examples/Forces Torques/: Cubes.ipynb  Cylinders.ipynb  Spheres.ipynb
examples/STL Magnets/: STL Examples.ipynb  STL Forces Pentagon.ipynb  Stanford Bunny.ipynb
examples/STL Magnets/stl/: cube.STL
examples/notebooks/Fields/: 1D Examples.ipynb  3D Examples - Assemblies.ipynb  3D_Examples Spheres.ipynb  First Steps.ipynb
examples/notebooks/Forces Torques/: Cubes.ipynb  Cylinders.ipynb  Spheres.ipynb
examples/notebooks/STL Magnets/: Colab Custom Magnet.ipynb  STL Examples.ipynb  STL Forces Pentagon.ipynb  STL_Forces.ipynb  Stanford Bunny.ipynb
examples/notebooks/STL Magnets/stl/: Stanford_Bunny_10000.stl  Stanford_Bunny_500.stl  hollow_hex.STL  pentagon_prism.STL
examples/scripts/fields/2D/: 2d_rectangles.py  2d_rods.py  polymagnet.py
examples/scripts/stl_magnets/: stl_forces.py
examples/scripts/stl_magnets/stl/: Stanford_Bunny_500.stl  cube.stl  pentagon_prism.stl  star.stl
forces_torques/: index.html
magnets/: index.html
magnets/composite_magnets/: index.html
magnets/magnets_1d/: index.html
magnets/magnets_2d/: index.html
magnets/magnets_3d/: index.html
magnets/magnets_overview/: index.html
methods/: index.html
methods/methods/: index.html
methods/transforms/: index.html
misc/: magnet_class_diagram  quaternion_class_diagram
notebooks/: Examples.ipynb
plots/: index.html
plots/plots_2d/: index.html
plots/plots_3d/: index.html
plots/plots_overview/: index.html
pymagnet/: index.html  meta.yaml
quaternions/: index.html
reports/coverage/: coverage.xml
reports/flake8/: index.html
reports/junit/: junit.xml
search/: search_index.json
src/pymagnet/: __init__.py  __main__.py  fit.py  plot.py
src/pymagnet/forces/: __init__.py  _cylinder_force.py  _mesh_force.py  _prism_force.py  _sphere_force.py
src/pymagnet/magnets/: __init__.py  _assembly2.py  _fields.py  _magnet.py  _magnet1.py  _magnet1D.py  _magnet2.py  _magnet2D.py  _magnet3.py  _magnet3D.py  _magnet_base.py  _poly2D.py  _poly3D.py  _polygon2D.py  _polygon3D.py  _quaternion.py  _routines.py  _routines2.py  _routines3.py
src/pymagnet/plots/: __init__.py  _plot1.py  _plot1D.py  _plot2.py  _plot2D.py  _plot3.py  _plotly2.py  _plotly2D.py  _plotly3D.py
src/pymagnet/utils/: __init__.py  _assemblies2D.py  _conversions.py  _fit.py  _point_structs.py  _prism_force.py  _quaternion.py  _routines2D.py  _routines3D.py  _trigonometry3D.py  _vector_structs.py  global_const.py  typeconf.py
tests/: __init__.py  quaternion_test.py  requirements.txt  test_magnet.py  test_pymagnet.py
transforms/: index.html
tutorials/MaMi_Dublin_2021/: 01_first_steps.ipynb  01_first_steps.slides.html  02_magnets_in_2D.ipynb  03_magnets_in_3D.ipynb
utils/: index.html
