[tool.poetry]
name = "pymagnet"
version = "0.4.0-alpha.1"
description = "User Friendly Magnetic Field Calculations"
authors = ["Peter Dunne <peter.dunne@applied-magnetism.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://www.applied-magnetism.com"
repository = "https://github.com/pdunne/pymagnet"
documentation = "https://pdunne.github.io/pymagnet/"
keywords = ["magnetism", "magnetic fields"]
# packages = [{ include = "src/pymagnet" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]


[tool.poetry.dependencies]
python = "^3.8, <3.10"
numpy = "^1.17"
numpy-stl = "^2.16.3"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# make it compatible with black
profile = "black"
